test/runnable/opoverload.nt
module opoverload;

macro import std.macro.assert;

struct S {
    int a;
    bool opEquals(int other) => a == other;
}

void main() {
    S s = S(5);
    assert(s == S(5));
    assert(s != S(6));
    assert(s == 5);
    assert(s != 6);
}
