test/fail_compilation/nested_struct.nt
module nested_struct;

void main() {
    int a = 5;
    struct S {
        int test() { return a; }
    }
    assert(S().test == 5);
}
